Split off CLI into own folder, made it modular for use in custom applications

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/Lem0ns/quantum-ban-check/issues"
   },
   "bin": {
-    "quantum-ban-check": "index.js"
+    "quantum-ban-check": "cli.js"
   },
   "homepage": "https://github.com/Lem0ns/quantum-ban-check#readme",
   "dependencies": {
